--- a/elements/oe-feel-editor.html
+++ b/elements/oe-feel-editor.html
@@ -13,6 +13,8 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
 <link rel="import" href="oe-feel-boxed-invocation-setting.html">
 <link rel="import" href="oe-feel-boxed-context-setting.html">
 <link rel="import" href="oe-feel-business-model-setting.html">
+<link rel="import" href="oe-feel-save-service-dialog.html">
+<link rel="import" href="oe-feel-simulate.html">
 <dom-module id="oe-feel-editor">
     <template>
         <style include="iron-flex iron-flex-alignment">
@@ -93,6 +95,56 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 background: rgba(0, 0, 0, 0.6);
                 color: #FFF;
             }
+
+            #floating-panel {
+                position: fixed;
+                top: 16px;
+                right: 16px;
+            }
+
+            .icons-panel paper-fab {
+                background: #FFF;
+                color: #222;
+                margin-bottom: 4px;
+            }
+
+            .service-list {
+                min-width: 200px;
+            }
+
+            .list-header {
+                height: 30px;
+                display: block;
+                border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+                padding: 0px 8px;
+            }
+
+            .service-item {
+                height: 30px;
+                padding: 0px 8px;
+                cursor: pointer;
+            }
+
+            .service-item iron-icon {
+                --iron-icon-width: 16px;
+                --iron-icon-height: 16px;
+                margin-left: 8px;
+            }
+
+            .service-label {
+                padding: 8px;
+                font-size: 14px;
+                background: rgba(0, 0, 0, 0.6);
+                color: #FFF;
+                display: flex;
+                margin-top: 16px;
+            }
+
+            .service-label iron-icon {
+                --iron-icon-width: 16px;
+                --iron-icon-height: 16px;
+                margin-left: 8px;
+            }
         </style>
         <div class="component-container">
             <iron-pages id="mainPageSelection" selected="[[_mainSection]]" attr-for-selected="mode">
@@ -108,6 +160,42 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                         <iron-icon icon="zoom-in" on-tap="_zoomIn"></iron-icon>
                         <iron-icon icon="zoom-out" on-tap="_zoomOut"></iron-icon>
                         <iron-icon icon="autorenew" on-tap="_resetWorkSpaceView"></iron-icon>
+                    </div>
+                    <div id="floating-panel" class="layout horizontal">
+                        <div class="selected-service" hidden=[[!_hasSelected(selectedService)]]>
+                            <label class="service-label">
+                                [[selectedService.name]]
+                                <iron-icon icon="create" hidden=[[!_editServiceMode]]></iron-icon>
+                            </label>
+                        </div>
+                        <div class="icons-panel layout vertical center">
+                            <paper-menu-button class="toolbar-item" no-animations no-overlap horizontal-align="right" vertical-align="bottom" ignore-select
+                                close-on-activate>
+                                <paper-fab icon="menu" class="dropdown-trigger"></paper-fab>
+                                <paper-menu class="dropdown-content service-list layout vertical">
+                                    <label class="list-header">Services List</label>
+                                    <template is="dom-repeat" items="{{services}}">
+                                        <div class="service-item layout horizontal center justified" on-tap="_selectService">
+                                            <label class="service-name">[[item.name]]</label>
+                                            <div class="actions-items layout horizontal">
+                                                <iron-icon icon="create" on-tap="_editDecisionService"></iron-icon>
+                                                <iron-icon icon="delete" on-tap="_deleteDecisionService"></iron-icon>
+                                            </div>
+                                        </div>
+                                    </template>
+                                    <div class="service-item empty-state" hidden="[[services.length]]">
+                                        <label class="service-name">No Services Found</label>
+                                    </div>
+                                </paper-menu>
+                            </paper-menu-button>
+                            <paper-fab mini icon="add" on-tap="_saveAsService"></paper-fab>
+                            <paper-menu-button class="toolbar-item" no-animations ignore-select horizontal-align="right" horizontal-offset="0" vertical-align="top">
+                                <paper-fab mini icon="av:play-arrow" class="dropdown-trigger"></paper-fab>
+                                <paper-card class="dropdown-content">
+                                    <oe-feel-simulate graph={{decisionGraph}} selected-nodes={{selectedNodes}}></oe-feel-simulate>
+                                </paper-card>
+                            </paper-menu-button>
+                        </div>
                     </div>
                 </div>
                 <div id="configure-section" mode="setting">
@@ -128,6 +216,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 </div>
             </iron-pages>
         </div>
+        <oe-feel-save-service-dialog id="saveServiceDialog" service="{{selectedService}}" service-list="[[services]]"></oe-feel-save-service-dialog>
         <oe-feel-connection-setting id="connectionSetting"></oe-feel-connector-setting>
     </template>
     <script>
@@ -137,12 +226,19 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 decisionGraph: {
                     type: Object,
                     observer: '_graphChanged'
+                },
+                services: {
+                    type: Array,
+                    value: []
                 }
             },
+            behaviors: [OEUtils.AjaxBehavior],
             listeners: {
                 'open-node-setting': '_handleOpenSetting',
+                'toggle-selection': '_toggleSelection',
                 'confirm-connection': '_handleNewConnection',
-                'reset-workspace-view': '_resetWorkSpaceView'
+                'reset-workspace-view': '_resetWorkSpaceView',
+                'load-service': ''
             },
             attached: function () {
                 this.set('_mainSection', 'empty');
@@ -186,36 +282,48 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     'KNOWLEDGE_SOURCE': {},
                     'BUSINESS_MODEL': {},
                 });
-                this.set('defaultData.BUSINESS_MODEL',{
+                this.set('defaultData.BUSINESS_MODEL', {
                     "decisionType": "DECISION_TABLE",
-                    "data":this.defaultData['DECISION_TABLE']
+                    "data": this.defaultData['DECISION_TABLE']
                 });
+                this.selectedNodes = [];
+                this.loadedGraphName = "";
+                this.set('_editServiceMode', false);
                 this._resetWorkSpaceView();
             },
+
             // Render graph
             _graphChanged: function (nval, oval) {
                 if (nval != oval && nval) {
-                    this.set('_mainSection', 'edit');
-                    var workSpace = this.$.workSpace;
-                    workSpace.innerHTML = "";
-                    this.set('counter', {
-                        'lastNodeIndex': 0,
-                        'DECISION_TABLE': 0,
-                        'BOXED_INVOCATION': 0,
-                        'BOXED_CONTEXT': 0,
-                        'KNOWLEDGE_SOURCE': 0,
-                        'BUSINESS_MODEL': 0,
-                        'INPUT': 0
-                    });
-                    this.decisionGraph.graph.nodes.forEach(this._createElementForNode.bind(this));
-                    Polymer.dom.flush();
-                    this.async(function () {
-                        this.decisionGraph.graph.connections.forEach(this._createConnection.bind(
-                            this));
-                    }, 100);
-                }else{
+                    this._renderGraph();
+                } else {
                     this.set('_mainSection', 'empty');
                 }
+            },
+            _renderGraph: function () {
+                this.set('_mainSection', 'edit');
+                var workSpace = this.$.workSpace;
+                workSpace.innerHTML = "";
+                this.set('counter', {
+                    'lastNodeIndex': 0,
+                    'DECISION_TABLE': 0,
+                    'BOXED_INVOCATION': 0,
+                    'BOXED_CONTEXT': 0,
+                    'KNOWLEDGE_SOURCE': 0,
+                    'BUSINESS_MODEL': 0,
+                    'INPUT': 0
+                });
+                if (this.loadedGraphName !== this.decisionGraph.name) {
+                    this.selectedNodes = [];
+                    this.loadedGraphName = this.decisionGraph.name;
+                    this.set('selectedService', null);
+                }
+                this.decisionGraph.graph.nodes.forEach(this._createElementForNode.bind(this));
+                Polymer.dom.flush();
+                this.async(function () {
+                    this.decisionGraph.graph.connections.forEach(this._createConnection.bind(
+                        this));
+                }, 100);
             },
             _createElementForNode: function (node) {
                 var workSpace = this.$.workSpace;
@@ -225,6 +333,11 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 var id = node.id || OEUtils.generateGuid();
                 nodeEle.setAttribute('id', id);
                 nodeEle.setAttribute('i', node.i);
+
+                var idx = this.selectedNodes.findIndex(function (n) {
+                    return n.id === node.id;
+                });
+                nodeEle.set('selected', (idx !== -1))
 
                 this.counter[node.nodeType]++;
                 this.counter.lastNodeIndex = (this.counter.lastNodeIndex > node.i) ? this.counter.lastNodeIndex :
@@ -308,10 +421,11 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 var nodeType = this.componentMap[compConfig.type];
                 var workSpaceRect = this.$.workSpace.getBoundingClientRect();
                 var defaultData = this.defaultData[nodeType] || {};
+                var nodeName = compConfig.name + " " + (this.counter[nodeType] + 1);
                 var nodeData = {
                     'id': OEUtils.generateGuid(),
                     'i': (this.counter.lastNodeIndex + 1),
-                    'name': compConfig.name + " " + (this.counter[nodeType] + 1),
+                    'name': nodeName,
                     'nodeType': nodeType,
                     'x': (eve.x - workSpaceRect.x) / this._viewSetting.scaleFactor,
                     'y': (eve.y - workSpaceRect.y) / this._viewSetting.scaleFactor,
@@ -414,6 +528,121 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
             _closeSetting: function () {
                 this.set('_mainSection', 'edit');
             },
+
+
+            //Handle Decision service
+            _toggleSelection: function (event) {
+                event.stopPropagation();
+                var node = event.detail;
+                var idx = this.selectedNodes.findIndex(function (n) {
+                    return n.id === node.id;
+                });
+                if (idx === -1) {
+                    this.push('selectedNodes', node);
+                } else {
+                    this.splice('selectedNodes', idx, 1);
+                }
+                node.set('selected', !node.selected);
+            },
+            _selectService: function (event) {
+                event.stopPropagation();
+                var item = event.model.item;
+                this.set('_editServiceMode', false);
+                this._loadService(item);
+            },
+            _hasSelected: function (service) {
+                return !!(service && service.id);
+            },
+            _deleteDecisionService: function (event) {
+                event.stopPropagation();
+                var item = event.model.item;
+                this.fire('oe-show-confirm', {
+                    message: 'Confirm deleting service : ' + item.name + ' ?',
+                    ok: function () {
+                        this._deleteService(item);
+                    }.bind(this)
+                })
+            },
+            _editDecisionService: function (event) {
+                event.stopPropagation();
+                var item = event.model.item;
+                this.set('_editServiceMode', true);
+                this._loadService(item);
+            },
+            _loadServiceHandler: function (event) {
+                event.stopPropagation();
+                this._loadService(event.detail);
+            },
+            _loadService: function (service) {
+                this.set('selectedService', JSON.parse(JSON.stringify(service)));
+                var elementNodes = this.querySelectorAll('oe-feel-component');
+                var selectedNodes = [];
+                [].forEach.call(elementNodes, function (ele) {
+                    var nodeName = ele.node.name;
+                    var idx = service.decisions.indexOf(nodeName);
+                    if (idx == -1) {
+                        ele.set('selected', false);
+                    } else {
+                        selectedNodes.push(ele);
+                        ele.set('selected', true);
+                    }
+                });
+                this.set('selectedNodes', selectedNodes);
+            },
+            _saveAsService: function () {
+                var nodeName = this.selectedNodes.map(function (el) {
+                    return el.node.name;
+                });
+                var service
+                if (this._editServiceMode) {
+                    service = this.selectedService;
+                    service.decisions = nodeName;
+                    this._saveService(service);
+                } else {
+                    //Creating new service
+                    service = {
+                        name: "",
+                        graphId: this.decisionGraph.name
+                    }
+                    service.decisions = nodeName;
+                    this.set('selectedService', service);
+                    this.$.saveServiceDialog.openDialog();
+                }
+            },
+            _saveService: function (service) {
+                var method = "POST";
+                if (service.id) {
+                    method = "PUT"
+                }
+                this.makeAjaxCall('api/decisionservices', method, service, null, null, null, function (err,
+                    resp) {
+                    if (!err) {
+                        var idx = this.services.findIndex(function (s) {
+                            return s.id === resp.id;
+                        });
+                        if (idx == -1) {
+                            this.push('services', resp);
+                        } else {
+                            this.splice('services', idx, 1, resp);
+                        }
+
+                        this.fire('oe-show-success', "Service created successfully");
+                    }
+                }.bind(this));
+            },
+            _deleteService: function (service) {
+                this.makeAjaxCall('api/decisionservices', 'delete', service, null, null, null, function (
+                    err, resp) {
+                    if (!err) {
+                        var idx = this.services.findIndex(function (s) {
+                            return s.id === service.id;
+                        });
+                        this.splice('services', idx, 1);
+                        this.fire('oe-show-success', "Service deleted successfully");
+                    }
+                }.bind(this));
+            },
+
 
             //WorkSpace manipulation
             _zoomIn: function () {
