--- a/elements/oe-feel-editor.html
+++ b/elements/oe-feel-editor.html
@@ -13,8 +13,8 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
 <link rel="import" href="oe-feel-boxed-invocation-setting.html">
 <link rel="import" href="oe-feel-boxed-context-setting.html">
 <link rel="import" href="oe-feel-business-model-setting.html">
-<link rel="import" href="oe-feel-save-service-dialog.html">
-<link rel="import" href="oe-feel-simulate.html">
+<link rel="import" href="oe-feel-service-manager.html">
+
 <dom-module id="oe-feel-editor">
     <template>
         <style include="iron-flex iron-flex-alignment">
@@ -153,7 +153,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 </div>
                 <div id="editor-section" mode="edit" class="layout horizontal justified">
                     <oe-feel-element-list id="element-list"></oe-feel-element-list>
-                    <div class="wrapper flex" on-track="_panWorkSpace" on-drop="_handleDrop" on-dragover="_handleDragOver">
+                    <div class="wrapper flex" on-track="_panWorkSpace" on-mouse-wheel="_handleMouseWheel" on-drop="_handleDrop" on-dragover="_handleDragOver">
                         <div class="flex" id="workSpace" style$="[[_calculateStyle(_viewSetting.scaleFactor,_viewSetting.currentX,_viewSetting.currentY)]]"></div>
                     </div>
                     <div id="workspace-actions" class="layout horizontal center around-justified">
@@ -162,40 +162,9 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                         <iron-icon icon="autorenew" on-tap="_resetWorkSpaceView"></iron-icon>
                     </div>
                     <div id="floating-panel" class="layout horizontal">
-                        <div class="selected-service" hidden=[[!_hasSelected(selectedService)]]>
-                            <label class="service-label">
-                                [[selectedService.name]]
-                                <iron-icon icon="create" hidden=[[!_editServiceMode]]></iron-icon>
-                            </label>
-                        </div>
-                        <div class="icons-panel layout vertical center">
-                            <paper-menu-button class="toolbar-item" no-animations no-overlap horizontal-align="right" vertical-align="bottom" ignore-select
-                                close-on-activate>
-                                <paper-fab icon="menu" class="dropdown-trigger"></paper-fab>
-                                <paper-menu class="dropdown-content service-list layout vertical">
-                                    <label class="list-header">Services List</label>
-                                    <template is="dom-repeat" items="{{services}}">
-                                        <div class="service-item layout horizontal center justified" on-tap="_selectService">
-                                            <label class="service-name">[[item.name]]</label>
-                                            <div class="actions-items layout horizontal">
-                                                <iron-icon icon="create" on-tap="_editDecisionService"></iron-icon>
-                                                <iron-icon icon="delete" on-tap="_deleteDecisionService"></iron-icon>
-                                            </div>
-                                        </div>
-                                    </template>
-                                    <div class="service-item empty-state" hidden="[[services.length]]">
-                                        <label class="service-name">No Services Found</label>
-                                    </div>
-                                </paper-menu>
-                            </paper-menu-button>
-                            <paper-fab mini icon="add" on-tap="_saveAsService"></paper-fab>
-                            <paper-menu-button class="toolbar-item" no-animations ignore-select horizontal-align="right" horizontal-offset="0" vertical-align="top">
-                                <paper-fab mini icon="av:play-arrow" class="dropdown-trigger"></paper-fab>
-                                <paper-card class="dropdown-content">
-                                    <oe-feel-simulate graph={{decisionGraph}} selected-nodes={{selectedNodes}}></oe-feel-simulate>
-                                </paper-card>
-                            </paper-menu-button>
-                        </div>
+                        <oe-feel-service-manager selected-service={{selectedService}} decision-graph={{decisionGraph}} selected-nodes=[[selectedNodes]]
+                            service-list={{services}}>
+                        </oe-feel-service-manager>
                     </div>
                 </div>
                 <div id="configure-section" mode="setting">
@@ -216,7 +185,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 </div>
             </iron-pages>
         </div>
-        <oe-feel-save-service-dialog id="saveServiceDialog" service="{{selectedService}}" service-list="[[services]]"></oe-feel-save-service-dialog>
+
         <oe-feel-connection-setting id="connectionSetting"></oe-feel-connector-setting>
     </template>
     <script>
@@ -232,13 +201,12 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     value: []
                 }
             },
-            behaviors: [OEUtils.AjaxBehavior],
             listeners: {
                 'open-node-setting': '_handleOpenSetting',
                 'toggle-selection': '_toggleSelection',
                 'confirm-connection': '_handleNewConnection',
                 'reset-workspace-view': '_resetWorkSpaceView',
-                'load-service': ''
+                'load-service': '_loadService'
             },
             attached: function () {
                 this.set('_mainSection', 'empty');
@@ -288,7 +256,6 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 });
                 this.selectedNodes = [];
                 this.loadedGraphName = "";
-                this.set('_editServiceMode', false);
                 this._resetWorkSpaceView();
             },
 
@@ -530,7 +497,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
             },
 
 
-            //Handle Decision service
+            //Handle Node selection
             _toggleSelection: function (event) {
                 event.stopPropagation();
                 var node = event.detail;
@@ -544,41 +511,18 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                 }
                 node.set('selected', !node.selected);
             },
-            _selectService: function (event) {
+            _loadService: function (event) {
                 event.stopPropagation();
-                var item = event.model.item;
-                this.set('_editServiceMode', false);
-                this._loadService(item);
-            },
-            _hasSelected: function (service) {
-                return !!(service && service.id);
-            },
-            _deleteDecisionService: function (event) {
-                event.stopPropagation();
-                var item = event.model.item;
-                this.fire('oe-show-confirm', {
-                    message: 'Confirm deleting service : ' + item.name + ' ?',
-                    ok: function () {
-                        this._deleteService(item);
-                    }.bind(this)
-                })
-            },
-            _editDecisionService: function (event) {
-                event.stopPropagation();
-                var item = event.model.item;
-                this.set('_editServiceMode', true);
-                this._loadService(item);
-            },
-            _loadServiceHandler: function (event) {
-                event.stopPropagation();
-                this._loadService(event.detail);
-            },
-            _loadService: function (service) {
+                var service = event.detail;
                 this.set('selectedService', JSON.parse(JSON.stringify(service)));
                 var elementNodes = this.querySelectorAll('oe-feel-component');
                 var selectedNodes = [];
                 [].forEach.call(elementNodes, function (ele) {
                     var nodeName = ele.node.name;
+                    if(!service || !service.decisions){
+                        ele.set('selected', false);
+                        return;
+                    }
                     var idx = service.decisions.indexOf(nodeName);
                     if (idx == -1) {
                         ele.set('selected', false);
@@ -588,59 +532,6 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     }
                 });
                 this.set('selectedNodes', selectedNodes);
-            },
-            _saveAsService: function () {
-                var nodeName = this.selectedNodes.map(function (el) {
-                    return el.node.name;
-                });
-                var service
-                if (this._editServiceMode) {
-                    service = this.selectedService;
-                    service.decisions = nodeName;
-                    this._saveService(service);
-                } else {
-                    //Creating new service
-                    service = {
-                        name: "",
-                        graphId: this.decisionGraph.name
-                    }
-                    service.decisions = nodeName;
-                    this.set('selectedService', service);
-                    this.$.saveServiceDialog.openDialog();
-                }
-            },
-            _saveService: function (service) {
-                var method = "POST";
-                if (service.id) {
-                    method = "PUT"
-                }
-                this.makeAjaxCall('api/decisionservices', method, service, null, null, null, function (err,
-                    resp) {
-                    if (!err) {
-                        var idx = this.services.findIndex(function (s) {
-                            return s.id === resp.id;
-                        });
-                        if (idx == -1) {
-                            this.push('services', resp);
-                        } else {
-                            this.splice('services', idx, 1, resp);
-                        }
-
-                        this.fire('oe-show-success', "Service created successfully");
-                    }
-                }.bind(this));
-            },
-            _deleteService: function (service) {
-                this.makeAjaxCall('api/decisionservices', 'delete', service, null, null, null, function (
-                    err, resp) {
-                    if (!err) {
-                        var idx = this.services.findIndex(function (s) {
-                            return s.id === service.id;
-                        });
-                        this.splice('services', idx, 1);
-                        this.fire('oe-show-success', "Service deleted successfully");
-                    }
-                }.bind(this));
             },
 
 
@@ -655,6 +546,7 @@ Any unauthorized reproduction, storage, transmission in any form or by any means
                     this.set('_viewSetting.scaleFactor', this._viewSetting.scaleFactor - 0.1);
                 }
             },
+            _handleMouseWheel:function(){},
             _panWorkSpace: function (event) {
                 event.stopPropagation();
                 var elem = event.currentTarget;
